tests/snapshots/compile__a_pass_carries_a_measurement_and_its_chain.snap
---
source: tests/compile.rs
expression: shader.body
---
const PI: f32 = 3.14159265359;

// The vertex stage every Output shares: one triangle over the whole target, from its index.
@vertex
fn vs_main(@builtin(vertex_index) i: u32) -> @builtin(position) vec4f {
    let p = vec2f(f32((i << 1u) & 2u), f32(i & 2u));
    return vec4f(p * 2.0 - 1.0, 0.0, 1.0);
}

// GLSL's `mod`: x - y * floor(x / y), which follows the sign of y. WGSL's `%` truncates
// instead, and differs from it wherever x / y is negative.
fn floor_mod(x: f32, y: f32) -> f32 { return x - y * floor(x / y); }
fn floor_mod2(x: vec2f, y: vec2f) -> vec2f { return x - y * floor(x / y); }
fn floor_mod3(x: vec3f, y: vec3f) -> vec3f { return x - y * floor(x / y); }
fn floor_mod4(x: vec4f, y: vec4f) -> vec4f { return x - y * floor(x / y); }

// A clock's whole part modulo a whole period, in integers. floor_mod would give the same
// number, but Metal compiles with fast math, which may regroup floor_mod(whole, n) + fraction
// as (whole + fraction) - ..., adding the fraction to the large whole part first and losing
// it; an integer remainder is a value no float sum can be folded into.
fn whole_mod(whole: f32, n: f32) -> f32 {
    let m = i32(n);
    return f32(((i32(whole) % m) + m) % m);
}

// Where a node that moves with time is, in its own cycles, from its Time — a count as
// `vec2f(whole, fraction)` — and its Offset, one helper per kind of period (`nodes::timing`).
// Each reduces the whole part by the period, adds the fraction, then adds the Offset, the
// order that brings a Time one period on back to exactly what a Time of zero drew.
// A node whose picture comes back every cycle: the fraction plus the Offset, which the body
// wraps where it needs to.
fn time_periodic(time: vec2f, offset: f32) -> f32 { return time.y + offset; }
// A node that comes back every `n` cycles, a whole number the count's whole part wraps at.
fn time_repeat(time: vec2f, n: f32, offset: f32) -> f32 {
    return whole_mod(time.x, n) + time.y + offset;
}
// A node that never comes back: the whole count.
fn time_unbounded(time: vec2f, offset: f32) -> f32 { return time.x + time.y + offset; }

// Two numbers from a point, 0 to 1, for a measurement's jitter. Deterministic in its
// argument: the same cell and the same moment give the same offset.
//
// Dave Hoskins' "Hash without Sine" (Shadertoy 4djSRW), MIT; see licenses/hash-without-sine.txt.
fn hash2(p: vec2f) -> vec2f {
    var q = fract(p.xyx * vec3f(0.1031, 0.1030, 0.0973));
    q += dot(q, q.yzx + 33.33);
    return fract((q.xx + q.yz) * q.zy);
}

fn hsv2rgb2(c: vec3f) -> vec3f {
    let K = vec4f(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
    let p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
    return c.z * mix(K.xxx, clamp(p - K.xxx, vec3f(0.0), vec3f(1.0)), c.y);
}

fn defaultUvMap(uv: vec2f) -> vec4f {
    let hue = (atan2(uv.y, uv.x) / (2.0 * 3.14159)) + 0.5;
    let saturation = clamp(length(uv) * 0.7, 0.0, 1.0);
    let value = 0.95;
    return vec4f(hsv2rgb2(vec3f(hue, saturation, value)), 1.0);
}

// Every color in the graph is premultiplied: rgb already scaled by alpha (docs/decisions.md,
// "Colors in the graph are premultiplied"). A linear operation — a mix, an average, a color
// times a number — runs on the premultiplied color as it is. Anything else in rgb reads the
// color's own channels through `unpremultiply` and goes back through `premultiply`. Nothing is
// under a zero alpha, so `unpremultiply` of a transparent color is transparent black.
fn unpremultiply(c: vec4f) -> vec4f {
    return select(vec4f(0.0), vec4f(c.rgb / c.a, c.a), c.a > 0.0);
}
fn premultiply(c: vec4f) -> vec4f { return vec4f(c.rgb * c.a, c.a); }

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_radialgradient3_centerColor: vec4f,
    u_control_radialgradient3_centerX: f32,
    u_control_radialgradient3_centerY: f32,
    u_control_radialgradient3_edgeColor: vec4f,
    u_control_radialgradient3_offset: f32,
    u_control_radialgradient3_radius: f32,
    u_opt_tap4_jitter: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(1) var<storage, read_write> tap: array<atomic<u32>>;

fn radialgradient3_output(uv: vec2f) -> vec4f {
    let dist = length(uv - vec2f(u.u_control_radialgradient3_centerX, u.u_control_radialgradient3_centerY));
    let radius = u.u_control_radialgradient3_radius;
    let raw = dist / select(radius, 1e-6, abs(radius) < 1e-6) + (u.u_control_radialgradient3_offset);
    let t = clamp(raw, 0.0, 1.0);
    return mix(u.u_control_radialgradient3_centerColor, u.u_control_radialgradient3_edgeColor, t);
}

fn tap4_measure(p: vec2f) {
    let color = unpremultiply(radialgradient3_output(p));
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    let l = clamp(dot(color.rgb, vec3f(0.2126, 0.7152, 0.0722)), -32768.0, 32767.0);
    let w = max(l, 0.0);
    var tk = bitcast<u32>(l);
    tk = select(tk | 0x80000000u, ~tk, (tk & 0x80000000u) != 0u);
    var ta: u32;
    var to: u32;
    atomicAdd(&tap[0u], 1u);
    atomicMax(&tap[3u], tk);
    atomicMin(&tap[4u], tk);
    ta = 2147483648u + u32(i32((l) * 65536.0));
    to = atomicAdd(&tap[1u], ta);
    if (to + ta < to) { atomicAdd(&tap[2u], 1u); }
    ta = 2147483648u + u32(i32((clamp(p.x * w, -32768.0, 32767.0)) * 65536.0));
    to = atomicAdd(&tap[5u], ta);
    if (to + ta < to) { atomicAdd(&tap[6u], 1u); }
    ta = 2147483648u + u32(i32((clamp(p.y * w, -32768.0, 32767.0)) * 65536.0));
    to = atomicAdd(&tap[7u], ta);
    if (to + ta < to) { atomicAdd(&tap[8u], 1u); }
    ta = u32(w * 65536.0);
    to = atomicAdd(&tap[9u], ta);
    if (to + ta < to) { atomicAdd(&tap[10u], 1u); }
    atomicAdd(&tap[11u], u32(clamp(color.r, 0.0, 3.9999) * 8192.0));
    atomicAdd(&tap[12u], u32(clamp(color.g, 0.0, 3.9999) * 8192.0));
    atomicAdd(&tap[13u], u32(clamp(color.b, 0.0, 3.9999) * 8192.0));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let cell = vec2i(frag_coord.xy);
    if (cell.x < 128 && cell.y < 128) { tap4_measure(((vec2f(cell) + 0.5) / f32(128)) * 2.0 - 1.0 + select(vec2f(0.0), (hash2(vec2f(cell) + fract(u.u_time) * 7.0) - 0.5) * 2.0 / f32(128), (u.u_opt_tap4_jitter) == 1)); }
    return vec4f(0.0);
}
