tests/snapshots/compile__state_cellularautomata.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_cellularautomata1_aliveInput: vec4f,
    u_control_cellularautomata1_deadInput: vec4f,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_cellularautomata1_cells: texture_2d<f32>;

fn cellularautomata1_output(uv: vec2f) -> vec4f {
    let state = textureSampleLevel(u_texture_cellularautomata1_cells, sampler_repeat_nearest, uv, 0.0).g;
    return mix(u.u_control_cellularautomata1_deadInput, u.u_control_cellularautomata1_aliveInput, state);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return cellularautomata1_output(uv);
}
